--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-  <!-- Navigation Section -->
+  <!-- Navigation -->
   <div class="navigation">
     <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" style="background-color: #0BADA6;" href="index.html">Latitude</a>
@@ -57,13 +57,9 @@
           <h3 class="title">Summary: Latitude vs. X</h3>
           <hr>
           <img src="Resources/assets/images/Fig1.png" class="vizualization rounded float-left" alt="Max Temperature Graph">
-          <p>The purpose of this project was to analyze how weather changes as you get closer to the equator. To
-            accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over
-            500 cities.</p>
-          <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitude.
-            Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the
-            source data and visualizations created as part of the analysis, as well as explanations and descriptions of
-            any trends and correlations witnessed.</p>
+          <p>The following graphs support an analysis that graphs max temperatures in different locations against the distance of this locatiosn from the equator.
+            The data source is the OpenWeatherMap API, from which we generated a list of the five hundred nearest cities to a list of randomly generated coordinates.</p>
+          <p>The data was used to consider the following variables and seek for visual relations with the distance to te equator: temperature, cloudiness, wind speed, and humidity. Finding are describen in each graph and section.</p>
         </div>
       </div>
       <div class="col-lg-5 col-md-12">
@@ -110,7 +106,7 @@
   </div>
   <!-- Footer Section -->
   <footer>
-    <div class="footer">Copyright &copy; Gabriela Cantu 2018</div>
+    <div class="footer">Copyright &copy; BootcampTEC 2021</div>
   </footer>
 
   <!-- Bootstrap JS -->
