--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               Plots
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="max_temperature.html">Max Temperature</a>
+              <a class="dropdown-item" href="hi_temp.html">Max Temperature</a>
               <a class="dropdown-item" href="humidity.html">Humidity</a>
               <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
               <a class="dropdown-item" href="wind_speed.html">Wind Speed</a>
@@ -106,7 +106,7 @@
   </div>
   <!-- Footer Section -->
   <footer>
-    <div class="footer">Copyright &copy; BootcampTEC 2021</div>
+    <div class="footer">May 2021</div>
   </footer>
 
   <!-- Bootstrap JS -->
