--- a/hi_temp.html
+++ b/hi_temp.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Bootstrap Visualization Dashboard</title>
+  <title>Latitude Analysis Dashboard with Attitude</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap -->
@@ -58,10 +58,8 @@
           <h3 class="title">Max Temperature</h3>
           <hr>
           <img src="Resources/assets/images/Lat_Temp.png" alt="Max Temperature Graph">
-          <p>As expected, the weather becomes significantly warmer as one approaches the equator (0 Deg. Latitude).
-            More interestingly, however, is the fact that the southern hemisphere tends to be warmer this time of the
-            year than the northern hemisphere. This may be due to the tilt of the earth at the time of the year this
-            data was gathered.</p>
+          <p>The graph shows there is a negative correlation between the distance of a city from the Equator. 
+              The highest temperature of the day increases as the distance from the Equator decreases.</p>
         </div>
       </div>
       <div class="col-lg-5 col-md-12">
