--- a/humidity.html
+++ b/humidity.html
@@ -4,15 +4,15 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Bootstrap Visualization Dashboard</title>
+  <title>Latitude Analysis Dashboard with Attitude</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <!-- Bootstrap CSS -->
+  <!-- Bring Bootstrap Stylesheet -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
 
-  <!--CSS Link-->
+  <!--Link to Style CSS -->
   <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
@@ -60,9 +60,8 @@
           <h3 class="title">Humidity</h3>
           <hr>
           <img src="Resources/assets/images/LAt_Humidity.png" alt="Humidity Graph">
-          <p>Humidity does not show a strong correlation to latitude. The visualization shows a great variety of
-            humidity percentages at different latitudes. Therefore, we cannot conclude that there is a conclusive
-            pattern between humidity and latitude.</p>
+          <p>There is no observable correlation between latitude and humidity. 
+              Humidity may have higher correlations with other variables as altitude and distance from massive water bodies.</p>
         </div>
       </div>
       <div class="col-lg-5 col-md-12">
@@ -109,7 +108,7 @@
   </div>
   <!-- Footer Section -->
   <footer>
-    <div class="footer">Copyright &copy; Gabriela Cantu 2018</div>
+    <div class="footer">Mayo 2020</div>
   </footer>
 
   <!-- Bootstrap JS -->
