--- a/humidity.html
+++ b/humidity.html
@@ -12,13 +12,12 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
 
-  <!--Link to Style CSS -->
   <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
 <body>
-  <!-- Navigation Section -->
+  <!-- Navigation -->
   <div class="navigation">
     <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" style="background-color: #0BADA6;" href="index.html">Latitude</a>
@@ -51,7 +50,7 @@
       </div>
     </nav>
   </div>
-  <!-- Content Section -->
+  <!-- Content -->
   <div class="container">
     <div class="row">
       <div class="col-lg-7 col-md-12">
@@ -106,7 +105,7 @@
       </div>
     </div>
   </div>
-  <!-- Footer Section -->
+  <!-- Footer -->
   <footer>
     <div class="footer">Mayo 2020</div>
   </footer>
