--- a/wind.html
+++ b/wind.html
@@ -4,22 +4,22 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Latitude Analysis Dashboard with Attitude</title>
+  <title>Bootstrap Visualization Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Bring in our bootstrap stylesheet -->
+  <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
-
+  <!--CSS Link-->
   <link rel="stylesheet" type="text/css" href="style.css">
-
 </head>
+
 <body>
-  <!-- Navigation -->
+  <!-- Navigation Section -->
   <div class="navigation">
     <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" style="background-color: #0BADA6;" href="index.html">Latitude</a>
-      <button class="navbar-toggler  border border-white" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+      <button class="navbar-toggler border border-white" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -31,10 +31,10 @@
               Plots
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="hi_temp.html">Max Temperature</a>
+              <a class="dropdown-item" href="max_temperature.html">Max Temperature</a>
               <a class="dropdown-item" href="humidity.html">Humidity</a>
               <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
-              <a class="dropdown-item" href="wind.html">Wind Speed</a>
+              <a class="dropdown-item active" href="wind_speed.html">Wind Speed</a>
             </div>
           </li>
           <li class="nav-item">
@@ -54,12 +54,12 @@
       <div class="col-lg-7 col-md-12">
         <!-- Left box  -->
         <div class="box">
-          <h3 class="title">Summary: Latitude vs. X</h3>
+          <h3 class="title">Wind Speed</h3>
           <hr>
-          <img src="Resources/assets/images/Lat_Temp.png" class="vizualization rounded float-left" alt="Max Temperature Graph">
-          <p>The following graphs support an analysis that graphs max temperatures in different locations against the distance of this locatiosn from the equator.
-            The data source is the OpenWeatherMap API, from which we generated a list of the five hundred nearest cities to a list of randomly generated coordinates.</p>
-          <p>The data was used to consider the following variables and seek for visual relations with the distance to te equator: temperature, cloudiness, wind speed, and humidity. Finding are describen in each graph and section.</p>
+          <img src="Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
+          <p>Wind speed appears to slightly increase as we move away from the equator. However, to conclusively
+            describe a pattern, we would need to go beyond the range in data to reach cities at closer to the poles.
+            Only then can we have a sample large to confirm the pattern.</p>
         </div>
       </div>
       <div class="col-lg-5 col-md-12">
@@ -67,46 +67,39 @@
         <div class="box">
           <h5 class="title">Visualizations</h5>
           <hr>
-
-
           <div class="container">
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
                 <a href="max_temperature.html">
-                  <img class="panel" src="Resources/assets/images/Lat_Temp.png" alt="Max Temperature Image">
+                  <img class="panel" src="Resources/assets/images/Fig1.png" alt="Max Temperature Image">
                 </a>
               </div>
               <div class="col-6">
                 <a href="humidity.html">
-                  <img class="panel" src="Resources/assets/images/LAt_Humidity.png" alt="Humidity Graph">
+                  <img class="panel" src="Resources/assets/images/Fig2.png" alt="Humidity Graph">
                 </a>
               </div>
             </div>
-
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
                 <a href="cloudiness.html">
-                  <img class="panel" src="Resources/assets/images/Lat_Cloudiness.png" alt="Cloudiness Graph">
+                  <img class="panel" src="Resources/assets/images/Fig3.png" alt="Cloudiness Graph">
                 </a>
               </div>
               <div class="col-6">
                 <a href="wind_speed.html">
-                  <img class="panel" src="Resources/assets/images/Lat_WindSpeed.png" alt="Wind Speed Graph">
+                  <img class="panel active" src="Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
                 </a>
               </div>
-
-
             </div>
           </div>
-
-
         </div>
       </div>
     </div>
   </div>
   <!-- Footer Section -->
   <footer>
-    <div class="footer">May 2021</div>
+    <div class="footer">Copyright &copy; Gabriela Cantu 2018</div>
   </footer>
 
   <!-- Bootstrap JS -->
@@ -116,7 +109,6 @@
     crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
-
 </body>
 
 </html>
