--- a/wind.html
+++ b/wind.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Bootstrap Visualization Dashboard</title>
+  <title>Latitude Analysis Dashboard with Attitude</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap CSS -->
@@ -56,10 +56,8 @@
         <div class="box">
           <h3 class="title">Wind Speed</h3>
           <hr>
-          <img src="Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
-          <p>Wind speed appears to slightly increase as we move away from the equator. However, to conclusively
-            describe a pattern, we would need to go beyond the range in data to reach cities at closer to the poles.
-            Only then can we have a sample large to confirm the pattern.</p>
+          <img src="Resources/assets/images/Lat_WindSpeed.png" alt="Wind Speed Graph">
+          <p>There is no observable correlation between wind speed and latitude.</p>
         </div>
       </div>
       <div class="col-lg-5 col-md-12">
@@ -67,37 +65,47 @@
         <div class="box">
           <h5 class="title">Visualizations</h5>
           <hr>
+
+
+
+
           <div class="container">
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
                 <a href="max_temperature.html">
-                  <img class="panel" src="Resources/assets/images/Fig1.png" alt="Max Temperature Image">
+                  <img class="panel active" src="Resources/assets/images/Lat_Temp.png" alt="Max Temperature Image">
                 </a>
               </div>
               <div class="col-6">
                 <a href="humidity.html">
-                  <img class="panel" src="Resources/assets/images/Fig2.png" alt="Humidity Graph">
+                  <img class="panel" src="Resources/assets/images/LAt_Humidity.png" alt="Humidity Graph">
                 </a>
               </div>
             </div>
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
                 <a href="cloudiness.html">
-                  <img class="panel" src="Resources/assets/images/Fig3.png" alt="Cloudiness Graph">
+                  <img class="panel" src="Resources/assets/images/Lat_Cloudiness.png" alt="Cloudiness Graph">
                 </a>
               </div>
               <div class="col-6">
                 <a href="wind_speed.html">
-                  <img class="panel active" src="Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
+                  <img class="panel" src="Resources/assets/images/Lat_WindSpeed.png" alt="Wind Speed Graph">
                 </a>
-              </div>
             </div>
-          </div>
+
+
         </div>
       </div>
+
+
     </div>
   </div>
-  <!-- Footer Section -->
+</div>
+</div>
+
+
+  <!-- Footer -->
   <footer>
     <div class="footer">June 2021</div>
   </footer>
