--- a/cloudiness.html
+++ b/cloudiness.html
@@ -57,10 +57,8 @@
         <div class="box">
           <h3 class="title">Cloudiness</h3>
           <hr>
-          <img src="Resources/assets/images/Fig3.png" alt="Cloudines Graph">
-          <p>Cloudiness does not show a strong correlation to latitude. The visualization shows a great variety of
-            cloudiness percentages at different latitudes. Therefore, we cannot conclude that there is a conclusive
-            pattern between cloudiness and latitude.</p>
+          <img src="Resources/assets/images/Lat_Cloudiness.png" alt="Cloudiness Graph">
+          <p>There is no apparent correlation between cloud formations and latitude.</p>
         </div>
       </div>
       <div class="col-lg-5 col-md-12">
