--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Latitude Analysis Dashboard with Attitude</title>
+  <title>Latitude with Attitude</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bring in our bootstrap stylesheet -->
@@ -38,7 +38,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="comparisons.html">Comparison</a>
+            <a class="nav-link" href="comparison.html">Comparison</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="data.html">Data</a>
