--- a/comparison.html
+++ b/comparison.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Bootstrap Visualization Dashboard</title>
+  <title>Latitude with Attitude</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap CSS -->
@@ -62,15 +62,15 @@
           <div class="container" style="padding-bottom: 40px;">
             <div class="row">
               <div class="col-lg-6" style="padding: 30px;">
-                <div class="title">vs. Max Temperature</div>
+                <div class="title">vs. Highest Temperature</div>
                 <a href="max_temperature.html">
-                  <img class="panel" src="Resources/assets/images/Fig1.png" alt="Max Temperature Image">
+                  <img class="panel" src="Resources/assets/images/Lat_Temp.png" alt="Max Temperature Graph">
                 </a>
               </div>
               <div class="col-lg-6" style="padding: 30px;">
                 <div class="title">vs. Humidity</div>
                 <a href="humidity.html">
-                  <img class="panel" src="Resources/assets/images/Fig2.png" alt="Humidity Graph">
+                  <img class="panel" src="Resources/assets/images/LAt_Humidity.png" alt="Humidity Graph">
                 </a>
               </div>
             </div>
@@ -79,14 +79,14 @@
               <div class="col-lg-6" style="padding: 30px;">
                 <div class="title">vs. Cloudiness</div>
                 <a href="cloudiness.html">
-                  <img class="panel" src="Resources/assets/images/Fig3.png" alt="Cloudiness Graph">
+                  <img class="panel" src="Resources/assets/images/Lat_Cloudiness.png" alt="Cloudiness Graph">
                 </a>
 
               </div>
               <div class="col-lg-6" style="padding: 30px;">
                 <div class="title">vs. Wind Speed</div>
                 <a href="wind_speed.html">
-                  <img class="panel" src="Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
+                  <img class="panel" src="Resources/assets/images/Lat_WindSpeed.png" alt="Wind Speed Graph">
                 </a>
               </div>
             </div>
@@ -98,7 +98,7 @@
 
   <!-- Footer Section -->
   <footer>
-    <div class="footer">Copyright &copy; Gabriela Cantu 2018</div>
+    <div class="footer">June 2021</div>
   </footer>
 
   <!-- Bootstrap JS -->
