--- a/comparison.html
+++ b/comparison.html
@@ -7,17 +7,16 @@
   <title>Latitude with Attitude</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Bootstrap CSS -->
+  <!-- Bootstrap CSS & Link -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
 
-  <!--CSS Link-->
   <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
 <body>
-  <!-- Navigation Section -->
+  <!-- Navigation -->
   <div class="navigation">
     <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand" style="background-color: #0BADA6;" href="index.html">Latitude</a>
@@ -50,13 +49,13 @@
       </div>
     </nav>
   </div>
-  <!-- Content Section -->
+  <!-- Content -->
   <div class="container">
     <div class="row">
       <div>
-        <!-- Left box  -->
+        <!-- Left  -->
         <div class="box">
-          <h3 class="title">Comparison: Latitude vs X</h3>
+          <h3 class="title">Comparison: Latitude vs Weather Variables</h3>
           <hr>
           <p>Click any plot to get an in-depth analysis.</p>
           <div class="container" style="padding-bottom: 40px;">
@@ -96,7 +95,7 @@
     </div>
   </div>
 
-  <!-- Footer Section -->
+  <!-- Footer -->
   <footer>
     <div class="footer">June 2021</div>
   </footer>
