--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
           <h3 class="title">Summary: Latitude vs. X</h3>
           <hr>
           <img src="Resources/assets/images/Lat_Temp.png" class="vizualization rounded float-left" alt="Max Temperature Graph">
-          <p>The following graphs support an analysis that graphs max temperatures in different locations against the distance of this locatiosn from the equator.
-            The data source is the OpenWeatherMap API, from which we generated a list of the five hundred nearest cities to a list of randomly generated coordinates.</p>
-          <p>The data was used to consider the following variables and seek for visual relations with the distance to te equator: temperature, cloudiness, wind speed, and humidity. Finding are describen in each graph and section.</p>
+          <p>The following graphs support an analysis that uses plots to determine how different weather variables change in relation with the distance to the equator.
+            Using five hundred random generated latitude and longitude coordinates, we used OpenWeatherMap API to find the closest city and download their weather information.</p>
+          <p>The ariables used for the analysis were: temperature, cloudiness, wind speed, and humidity. Finding are describen in each graph and section.</p>
         </div>
       </div>
       <div class="col-lg-5 col-md-12">
