--- a/humidity.html
+++ b/humidity.html
@@ -34,10 +34,10 @@
               Plots
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="max_temperature.html">Max Temperature</a>
+              <a class="dropdown-item" href="hi_temp.html">Max Temperature</a>
               <a class="dropdown-item active" href="humidity.html">Humidity</a>
               <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
-              <a class="dropdown-item" href="wind_speed.html">Wind Speed</a>
+              <a class="dropdown-item" href="wind.html">Wind Speed</a>
             </div>
           </li>
           <li class="nav-item">
@@ -74,7 +74,7 @@
           <div class="container">
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
-                <a href="max_temperature.html">
+                <a href="hi_temp.html">
                   <img class="panel active" src="Resources/assets/images/Lat_Temp.png" alt="Max Temperature Image">
                 </a>
               </div>
@@ -92,7 +92,7 @@
                 </a>
               </div>
               <div class="col-6">
-                <a href="wind_speed.html">
+                <a href="wind.html">
                   <img class="panel" src="Resources/assets/images/Lat_WindSpeed.png" alt="Wind Speed Graph">
                 </a>
               </div>
