--- a/wind.html
+++ b/wind.html
@@ -32,10 +32,10 @@
               Plots
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="max_temperature.html">Max Temperature</a>
+              <a class="dropdown-item" href="hi_temp.html">Max Temperature</a>
               <a class="dropdown-item" href="humidity.html">Humidity</a>
               <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
-              <a class="dropdown-item active" href="wind_speed.html">Wind Speed</a>
+              <a class="dropdown-item active" href="wind.html">Wind Speed</a>
             </div>
           </li>
           <li class="nav-item">
@@ -90,7 +90,7 @@
                 </a>
               </div>
               <div class="col-6">
-                <a href="wind_speed.html">
+                <a href="wind.html">
                   <img class="panel" src="Resources/assets/images/Lat_WindSpeed.png" alt="Wind Speed Graph">
                 </a>
             </div>
