--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <img src="Resources/assets/images/Lat_Temp.png" class="vizualization rounded float-left" alt="Max Temperature Graph">
           <p>The following graphs support an analysis that uses plots to determine how different weather variables change in relation with the distance to the equator.
             Using five hundred random generated latitude and longitude coordinates, we used OpenWeatherMap API to find the closest city and download their weather information.</p>
-          <p>The ariables used for the analysis were: temperature, cloudiness, wind speed, and humidity. Finding are describen in each graph and section.</p>
+          <p>The variables used for the analysis were: temperature, cloudiness, wind speed, and humidity. Finding are describen in each graph and section.</p>
         </div>
       </div>
       <div class="col-lg-5 col-md-12">
@@ -73,7 +73,7 @@
           <div class="container">
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
-                <a href="max_temperature.html">
+                <a href="hi_temp.html">
                   <img class="panel" src="Resources/assets/images/Lat_Temp.png" alt="Max Temperature Image">
                 </a>
               </div>
@@ -91,7 +91,7 @@
                 </a>
               </div>
               <div class="col-6">
-                <a href="wind_speed.html">
+                <a href="wind.html">
                   <img class="panel" src="Resources/assets/images/Lat_WindSpeed.png" alt="Wind Speed Graph">
                 </a>
               </div>
