--- a/comparison.html
+++ b/comparison.html
@@ -33,10 +33,10 @@
               Plots
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="max_temperature.html">Max Temperature</a>
+              <a class="dropdown-item" href="hi_temp.html">Max Temperature</a>
               <a class="dropdown-item" href="humidity.html">Humidity</a>
               <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
-              <a class="dropdown-item" href="wind_speed.html">Wind Speed</a>
+              <a class="dropdown-item" href="wind.html">Wind Speed</a>
             </div>
           </li>
           <li class="nav-item">
@@ -63,7 +63,7 @@
             <div class="row">
               <div class="col-lg-6" style="padding: 30px;">
                 <div class="title">vs. Highest Temperature</div>
-                <a href="max_temperature.html">
+                <a href="hi_temp.html">
                   <img class="panel" src="Resources/assets/images/Lat_Temp.png" alt="Max Temperature Graph">
                 </a>
               </div>
@@ -85,7 +85,7 @@
               </div>
               <div class="col-lg-6" style="padding: 30px;">
                 <div class="title">vs. Wind Speed</div>
-                <a href="wind_speed.html">
+                <a href="wind.html">
                   <img class="panel" src="Resources/assets/images/Lat_WindSpeed.png" alt="Wind Speed Graph">
                 </a>
               </div>
