--- a/hi_temp.html
+++ b/hi_temp.html
@@ -73,7 +73,7 @@
           <div class="container">
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
-                <a href="max_temperature.html">
+                <a href="hi_temp.html">
                   <img class="panel active" src="Resources/assets/images/Lat_Temp.png" alt="Max Temperature Image">
                 </a>
               </div>
@@ -91,7 +91,7 @@
                 </a>
               </div>
               <div class="col-6">
-                <a href="wind_speed.html">
+                <a href="wind.html">
                   <img class="panel" src="Resources/assets/images/Lat_WindSpeed.png" alt="Wind Speed Graph">
                 </a>
               </div>
