--- a/wind.html
+++ b/wind.html
@@ -73,7 +73,7 @@
           <div class="container">
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
-                <a href="max_temperature.html">
+                <a href="hi_temp.html">
                   <img class="panel active" src="Resources/assets/images/Lat_Temp.png" alt="Max Temperature Image">
                 </a>
               </div>
