--- a/cloudiness.html
+++ b/cloudiness.html
@@ -73,7 +73,7 @@
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
                 <a href="hi_temp.html">
-                  <img class="panel active" src="Resources/assets/images/Lat_Temp.png" alt="Max Temperature Image">
+                  <img class="panel" src="Resources/assets/images/Lat_Temp.png" alt="Max Temperature Image">
                 </a>
               </div>
               <div class="col-6">
@@ -85,7 +85,7 @@
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
                 <a href="cloudiness.html">
-                  <img class="panel" src="Resources/assets/images/Lat_Cloudiness.png" alt="Cloudiness Graph">
+                  <img class="panel active" src="Resources/assets/images/Lat_Cloudiness.png" alt="Cloudiness Graph">
                 </a>
               </div>
               <div class="col-6">
