--- a/wind.html
+++ b/wind.html
@@ -49,6 +49,7 @@
       </div>
     </nav>
   </div>
+
   <!-- Content Section -->
   <div class="container">
     <div class="row">
@@ -62,19 +63,18 @@
         </div>
       </div>
       <div class="col-lg-5 col-md-12">
+
+
         <!-- Right Box -->
         <div class="box">
           <h5 class="title">Visualizations</h5>
           <hr>
 
-
-
-
           <div class="container">
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
                 <a href="hi_temp.html">
-                  <img class="panel active" src="Resources/assets/images/Lat_Temp.png" alt="Max Temperature Image">
+                  <img class="panel" src="Resources/assets/images/Lat_Temp.png" alt="Max Temperature Image">
                 </a>
               </div>
               <div class="col-6">
@@ -91,7 +91,7 @@
               </div>
               <div class="col-6">
                 <a href="wind.html">
-                  <img class="panel" src="Resources/assets/images/Lat_WindSpeed.png" alt="Wind Speed Graph">
+                  <img class="panel active" src="Resources/assets/images/Lat_WindSpeed.png" alt="Wind Speed Graph">
                 </a>
             </div>
 
