--- a/humidity.html
+++ b/humidity.html
@@ -71,17 +71,17 @@
         <div class="box">
           <h5 class="title">Visualizations</h5>
           <hr>
-          
+
           <div class="container">
             <div class="row" style="padding-bottom: 30px;">
               <div class="col-6">
                 <a href="hi_temp.html">
-                  <img class="panel active" src="Resources/assets/images/Lat_Temp.png" alt="Max Temperature Image">
+                  <img class="panel" src="Resources/assets/images/Lat_Temp.png" alt="Max Temperature Image">
                 </a>
               </div>
               <div class="col-6">
                 <a href="humidity.html">
-                  <img class="panel" src="Resources/assets/images/LAt_Humidity.png" alt="Humidity Graph">
+                  <img class="panel active" src="Resources/assets/images/LAt_Humidity.png" alt="Humidity Graph">
                 </a>
               </div>
             </div>
